Added Notebooks for Tree basics

--- a/Python - Data Structures/04 - Python - Linked List Implementation.ipynb
+++ b/Python - Data Structures/04 - Python - Linked List Implementation.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,33 +91,61 @@
     "        node = self.head\n",
     "        while node is not None:\n",
     "            yield node\n",
-    "            node = node.next"
+    "            node = node.next\n",
+    "    \n",
+    "    #This function inserts a node at the beginning of the list\n",
+    "    def insert_at_beginning(self, node):\n",
+    "        node.next = self.head\n",
+    "        self.head = node\n",
+    "\n",
+    "    #This function inserts a node at the end of the list\n",
+    "    def insert_at_end(self, node):\n",
+    "        if self.head is None:\n",
+    "            self.head = node\n",
+    "            return\n",
+    "        for current_node in self:\n",
+    "            pass\n",
+    "        current_node.next = node\n",
+    "    \n",
+    "    #This function removes the node with specified data\n",
+    "    def remove_specific_node(self, target_node_data):\n",
+    "        if self.head is None:\n",
+    "            raise Exception(\"List is empty\")\n",
+    "        if self.head.data == target_node_data:\n",
+    "            self.head = self.head.next\n",
+    "            return\n",
+    "        \n",
+    "        previous_node = self.head\n",
+    "        for node in self:\n",
+    "            if node.data == target_node_data:\n",
+    "                previous_node.next = node.next\n",
+    "                return\n",
+    "            previous_node = node\n",
+    "        \n",
+    "        raise Exception(\"Node with data '%s' not found\" % target_node_data)\n",
+    "    \n",
+    "    #This function inserts a node at the beginning of the list\n",
+    "    def remove_from_beginning(self):\n",
+    "        if self.head is None:\n",
+    "            raise Exception(\"List is empty\")\n",
+    "        \n",
+    "        self.head = self.head.next\n",
+    "        return\n",
+    "\n",
+    "    #This function inserts a node at the end of the list\n",
+    "    def remove_from_end(self):\n",
+    "        if self.head is None:\n",
+    "            raise Exception(\"List is empty\")\n",
+    "        \n",
+    "        current_node = self.head\n",
+    "        while current_node.next.next is not None:\n",
+    "            current_node = current_node.next\n",
+    "        current_node.next = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "None"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sl_list = SinglyLinkedList()\n",
-    "sl_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -126,20 +154,21 @@
        "a -> None"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "first_node = Node(\"a\")  #Created a node object with data \"a\" and link None\n",
-    "sl_list.head = first_node #Linking first_node with head\n",
+    "sl_list = SinglyLinkedList() #Initializing an empty singly linked list\n",
+    "first_node = Node(\"a\")       #Created a node object with data \"a\" and link None\n",
+    "sl_list.head = first_node    #Linking first_node with head\n",
     "sl_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +177,7 @@
        "a -> b -> c -> None"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -181,6 +210,61 @@
     "#Normal for loop can be used for sl_list (an object of SinglyLinkedList class), because __iter__ function is defined\n",
     "for node in sl_list:\n",
     "    print(node)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "A -> None\n",
+      "B -> A -> None\n",
+      "B -> A -> Z -> None\n",
+      "B -> A -> Z -> Y -> None\n"
+     ]
+    }
+   ],
+   "source": [
+    "#List Insertion examples\n",
+    "newlist = SinglyLinkedList()\n",
+    "print(newlist)\n",
+    "newlist.insert_at_beginning(Node('A'))\n",
+    "print(newlist)\n",
+    "newlist.insert_at_beginning(Node('B'))\n",
+    "print(newlist)\n",
+    "newlist.insert_at_end(Node('Z'))\n",
+    "print(newlist)\n",
+    "newlist.insert_at_end(Node('Y'))\n",
+    "print(newlist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A -> Z -> Y -> None\n",
+      "A -> Z -> None\n",
+      "Z -> None\n"
+     ]
+    }
+   ],
+   "source": [
+    "newlist.remove_from_beginning()\n",
+    "print(newlist)\n",
+    "newlist.remove_from_end()\n",
+    "print(newlist)\n",
+    "newlist.remove_specific_node('A')\n",
+    "print(newlist)"
    ]
   },
   {
